--- a/css/style.less
+++ b/css/style.less
@@ -300,7 +300,7 @@ body {
 		height: 100%;
 		.user-info{
 			/*个人信息*/
-			padding: 40px 20px 30px;
+			padding:  20px;
 			background: #4154b2;
 			.user-warp{
 				text-align: center;
@@ -327,11 +327,10 @@ body {
 			/*导航部分*/
 			position: relative;
 			overflow-y: auto;
-			height: 100%;
 			.nav{
 				margin: 0;
 				padding: 12px 0;
-				height: 100%;
+				height: calc(100% - 40px);
 				li{
 					line-height: 30px;
 					padding: 0 20px;
