--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ a {
 .flex-column,
 .flex-row-vertical {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
 }
@@ -112,6 +113,7 @@ a {
 .flex-column {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
 }
@@ -119,12 +121,14 @@ a {
 .flex-row-vertical {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
 }
 /* 水平方向换行 */
 .flex-row-wrap,
 .flex-column {
+  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
@@ -132,6 +136,7 @@ a {
 .flex-row-reverse {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
   -ms-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
@@ -140,52 +145,63 @@ a {
 }
 .flex-col {
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
 }
 .flex-middle {
   -webkit-box-align: center;
+  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
 }
 .flex-bottom {
   -webkit-box-align: end;
+  -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
 }
 .flex-justify-start {
   -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
 }
 .flex-justify-end {
   -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
 }
 .flex-justify-between {
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .flex-align-start {
+  -webkit-align-content: flex-start;
   -ms-flex-line-pack: start;
   align-content: flex-start;
 }
 .flex-align-end {
+  -webkit-align-content: flex-end;
   -ms-flex-line-pack: end;
   align-content: flex-end;
 }
 .flex-align-around {
+  -webkit-align-content: space-around;
   -ms-flex-line-pack: distribute;
   align-content: space-around;
 }
 .flex-align-between {
+  -webkit-align-content: space-between;
   -ms-flex-line-pack: justify;
   align-content: space-between;
 }
 .flex-col-auto {
   -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
   flex: 0 auto;
 }
@@ -249,26 +265,30 @@ a {
 .fade-scale.in {
   opacity: 1;
   -webkit-transform: none;
-  transform: none;
+  -ms-transform: none;
+      transform: none;
 }
 .fade {
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
   -webkit-transform: translateY(50px);
-  transform: translateY(50px);
+  -ms-transform: translateY(50px);
+      transform: translateY(50px);
 }
 .fade-scale {
   -webkit-transition: 0.6s ease-in-out;
   transition: 0.6s ease-in-out;
   -webkit-transform: translate(10%, 20%) scale(0.6);
-  transform: translate(10%, 20%) scale(0.6);
+  -ms-transform: translate(10%, 20%) scale(0.6);
+      transform: translate(10%, 20%) scale(0.6);
 }
 @media screen and (max-width: 480px) {
   .fade,
   .fade-scale {
     opacity: 1;
     -webkit-transform: none;
-    transform: none;
+    -ms-transform: none;
+        transform: none;
   }
 }
 /* 分页样式 */
@@ -311,7 +331,6 @@ a {
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 body {
@@ -330,8 +349,7 @@ body {
   width: 240px;
   min-height: 100%;
   background: #fff;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -webkit-transition: 0.4s cubic-bezier(0.18, 0.81, 0.3, 0.89);
   transition: 0.4s cubic-bezier(0.18, 0.81, 0.3, 0.89);
 }
@@ -341,7 +359,7 @@ body {
 }
 #menu .inner .user-info {
   /*个人信息*/
-  padding: 40px 20px 30px;
+  padding: 20px;
   background: #4154b2;
 }
 #menu .inner .user-info .user-warp {
@@ -362,25 +380,23 @@ body {
   height: 80px;
   border: 2px solid #fff;
   border-radius: 50%;
-  -webkit-box-shadow: 0 0 3px #fff;
-          box-shadow: 0 0 3px #fff;
+  box-shadow: 0 0 3px #fff;
 }
 #menu .inner .scroll-warp {
   /*导航部分*/
   position: relative;
   overflow-y: auto;
-  height: 100%;
 }
 #menu .inner .scroll-warp .nav {
   margin: 0;
   padding: 12px 0;
-  height: 100%;
+  height: calc(60%);
 }
 #menu .inner .scroll-warp .nav li {
   line-height: 30px;
   padding: 0 20px;
   -webkit-transition: .2s;
-  transition: .2s;
+          transition: .2s;
 }
 #menu .inner .scroll-warp .nav li:hover {
   background: #4154b2;
