--- a/css/style.less
+++ b/css/style.less
@@ -326,6 +326,7 @@ body {
 		.scroll-warp{
 			/*导航部分*/
 			position: relative;
+			overflow-x: hidden;
 			overflow-y: auto;
 			.nav{
 				margin: 0;
