--- a/css/style.less
+++ b/css/style.less
@@ -18,6 +18,50 @@ p{word-break: break-all;}
 input:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
+
+h1,h2,h3,h4,h5,h6 {
+	font-weight: 400
+}
+
+h1,.h1 {
+	font-size: 44px;
+	line-height: 48px
+}
+
+h2,.h2 {
+	font-size: 34px;
+	line-height: 40px
+}
+
+h3,.h3 {
+	font-size: 24px;
+	line-height: 32px
+}
+
+h4,.h4 {
+	font-size: 20px;
+	line-height: 28px
+}
+
+h5,.h5 {
+	font-size: 16px;
+	line-height: 24px
+}
+
+h6,.h6 {
+	font-size: 12px;
+	line-height: 20px
+}
+
+input[type="button"],input[type="submit"],input[type="search"],input[type="reset"] {
+	cursor: pointer;
+	-webkit-appearance: button
+}
+
+input:focus,select:focus,button:focus,textarea:focus {
+	outline: none
+}
+
 a{text-decoration:none;cursor: pointer;}
 /*a:link{color: #333;}*/
 /*a:visited{color: #333;}*/
@@ -35,7 +79,7 @@ a{text-decoration:none;cursor: pointer;}
 .clearfix::after{content:'';display:block;clear: both;}
 
 /* 文字溢出隐藏 */
-.ellipsis{
+.text-clip{
 	padding: 0 2px;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -43,14 +87,14 @@ a{text-decoration:none;cursor: pointer;}
 }
 
 /* fle布局 */
-.flex-row,.flex-column,.flex-row-vertical {
+.flex, .flex-row, .flex-column {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex
 }
 /* 水平方向*/
-.flex-column {
+.flex-row {
 	-webkit-box-orient: horizontal;
 	-webkit-box-direction: normal;
 	-webkit-flex-direction: row;
@@ -58,7 +102,7 @@ a{text-decoration:none;cursor: pointer;}
 	flex-direction: row
 }
 /* 垂直方向 */
-.flex-row-vertical {
+.flex-column {
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	-webkit-flex-direction: column;
@@ -66,7 +110,7 @@ a{text-decoration:none;cursor: pointer;}
 	flex-direction: column
 }
 /* 水平方向换行 */
-.flex-row-wrap,.flex-column {
+.flex-row-wrap {
 	-webkit-flex-wrap: wrap;
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap
@@ -247,28 +291,6 @@ a{text-decoration:none;cursor: pointer;}
 	}
 }
 
-/* 分页样式 */
-.pagination {margin-top: 15px;text-align: right;}
-.pagination li {display: inline-block;margin-right: -1px;padding: 3px 6px;border: 1px solid #e2e2e2;min-width: 20px;text-align: center;}
-.pagination li.active {background: #49AEEA;color: #fff;border: 1px solid #49AEEA;}
-.pagination li a {display: block;text-align: center;}
-
-/* 返回顶部 */
-#gotoTop {
-	display: none;
-	position: fixed;
-	bottom: 15%;
-	right: 15px;
-	z-index: 9999999;
-	cursor: pointer;
-	width: 45px;
-	height: 45px;
-	font-size: 0;
-	overflow: hidden;
-	background: url(../images/gotop.png) no-repeat;
-	background-size: 45px 45px;
-}
-
 
 *,*::before,*::after{
 	-webkit-box-sizing: border-box;
@@ -279,11 +301,23 @@ body {
 	color: #333;
 	font-size: 14px;
 	font-family: Microsoft YaHei,Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;
-	overflow: hidden;
+	overflow-x: hidden;
+}
+
+.warp{
+	width: 960px;
+	margin: 0 auto;
+}
+@media screen and (max-width: 960px) {
+	.warp{
+		padding: 0 10px;
+		width: 100%;
+	}
 }
 
 /* menu */
 #menu {
+	display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -298,9 +332,22 @@ body {
 	.inner{
 		position: relative;
 		height: 100%;
+		#menu-off{
+			position: absolute;
+			top: 0;
+			left: 100%;
+			width: 55px;
+			height: 55px;
+			line-height: 55px;
+			text-align: center;
+			color: #fff;
+			i{
+				font-size: 28px;
+			}
+		}
 		.user-info{
 			/*个人信息*/
-			padding:  20px;
+			padding:  35px 20px;
 			background: #4154b2;
 			.user-warp{
 				text-align: center;
@@ -348,3 +395,200 @@ body {
 	}
 }
 
+/* main */
+#main{
+	padding-left: 240px;
+	min-height: 100%;
+	transition: .4s ease-in-out;
+	.top-header{
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 30;
+		width: 100%;
+		height: 55px;
+		line-height: 55px;
+		color: #fff;
+		background: #3f51b5;
+		transition: padding-left .8s ease-in-out;
+	}
+	h2{
+		// visibility: hidden;
+		height: 55px;
+		line-height: 55px;
+		font-weight: 600;
+		font-size: 18px;
+		padding-right: 15px;
+		text-align: center;
+	}
+	.header-icon{
+		width: 55px;
+		text-align: center;
+		i{
+			font-size: 25px;
+			font-weight: 800;
+			color: #fff;
+		}
+	}
+	.content-header {
+		min-height: 210px;
+		margin-left: -240px;
+		padding: 104px 16px 48px 256px;
+		color: #fff;
+		background: #3F51B5;
+		text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
+		.title{
+			font-weight: 500;
+		}
+		.subtitle{
+			padding-top: 6px;
+			font-weight: 300;
+			color: #C5CAE9
+		}
+	}
+	.article-list{
+		padding: 20px 0;
+		.article-list-item{
+			padding: 10px 20px;
+			box-shadow: 0 1px 5px 1px rgba(0,0,0,0.2);
+			&:not(:last-child){
+				margin-bottom: 15px;
+			}
+			.article-title{
+				padding-bottom: 5px;
+				a{
+					color: #3F51B5;
+				}
+			}
+			.post-time{
+				font-size: 12px;
+				color:#999;
+			}
+			.article-content{
+				word-break: break-all;
+			}
+		}
+	}
+	#article{
+		margin: 20px auto;
+		.article-detail{
+			padding: 35px;
+			margin-top: -115px;
+			// min-height: 600px;
+			background: #fff;
+			border-radius: 10px;
+			-webkit-box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.5);
+			box-shadow: 0 8px 26px -4px rgba(0, 0, 0, 0.3);
+		}
+	}
+	#footer{
+		margin-left: -240px;
+		text-align: center;
+		color: #fff;
+		.footer-top{
+			padding: 5px 0;
+			background: #7285ef;
+		}
+		.footer-bottom{
+			padding: 10px 0;
+			background: #3f51b5;
+		}
+	}
+
+}
+
+.tag-list{
+	margin-top: 10px;
+	margin-bottom: 5px;
+	padding-top: 10px;
+	border-top: 1px solid rgba(0,0,0,.1);
+	li{
+		margin-right: 5px;
+		float: left;
+		text-align: center;
+		font-size: 12px;
+		a{
+			padding: 3px 12px;
+			display: inline-block;
+			color: #fff;
+		}
+	}
+	li:nth-child(n+1){
+		background: #8BC34A
+	}
+	li:nth-child(n+2){
+		background: #673AB7;
+	}
+	li:nth-child(n+3){
+		background: #FF9800;
+	}
+	li:nth-child(n+4){
+		background: #F44336;
+	}
+	li:nth-child(n+5){
+		background: #00abc0;
+	}
+	li:nth-child(n+6){
+		background: #2196F3;
+	}
+	li:nth-child(n+7){
+		background: #2F4056;
+	}
+	li:nth-child(n+8){
+		background: #009688;
+	}
+	li:nth-child(n+9){
+		background: #5FB878;
+	}
+}
+
+/* 分页样式 */
+.pagination {
+	margin: 15px auto;
+	text-align: center;
+	li{
+		display: inline-block;
+		margin-right: 1px;
+		padding: 3px 8px;
+		border: 1px solid #e2e2e2;
+		min-width: 20px;
+		text-align: center;
+		transition: 0.3s ease-in-out;
+		&:hover{
+			background-color: #3f51b5;
+			a{
+				color: #fff;
+			}
+		}
+		&.active {
+			background: #3f51b5;
+			a{
+				color: #fff;
+			}
+		}
+		a {
+			color: #333;
+			display: block;
+			text-align: center;
+		}
+	}
+}
+
+
+/* 返回顶部 */
+#gotop {
+	display: none;
+	position: fixed;
+	right: 16px;
+	bottom: 30px;
+	cursor: pointer;
+	width: 56px;
+	height: 56px;
+	line-height: 56px;
+	text-align: center;
+	color: #fff;
+	font-size: 22px;
+	font-weight: 600;
+	background: #FF4081;
+	border-radius: 50%;
+}
