--- a/css/style.less
+++ b/css/style.less
@@ -411,6 +411,10 @@ body {
 		color: #fff;
 		background: #3f51b5;
 		transition: padding-left .8s ease-in-out;
+		&.fixed{
+			box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.26);
+		}
+
 	}
 	h2{
 		// visibility: hidden;
@@ -503,6 +507,7 @@ body {
 	border-top: 1px solid rgba(0,0,0,.1);
 	li{
 		margin-right: 5px;
+		margin-bottom: 5px;
 		float: left;
 		text-align: center;
 		font-size: 12px;
