--- a/css/style.css
+++ b/css/style.css
@@ -136,13 +136,18 @@ a {
 .ar {
   text-align: right;
 }
-.hide {
+.hidden {
   display: none;
 }
 .clearfix::after {
   content: '';
   display: block;
   clear: both;
+}
+/* 锁定页面 禁止下拉 */
+.lock {
+  overflow: hidden;
+  max-height: 100%;
 }
 /* 文字溢出隐藏 */
 .text-clip {
@@ -273,11 +278,11 @@ a {
   z-index: 70;
   width: 100%;
   height: 3px;
-  background: #ff4081;
+  background: #FF4081;
 }
 #loading.active {
-  -webkit-animation: loading-anim 3s ease-in-out infinite;
-  animation: loading-anim 3s ease-in-out infinite;
+  -webkit-animation: loading-anim 1s ease-in-out infinite;
+          animation: loading-anim 1s ease-in-out infinite;
 }
 @-webkit-keyframes loading-anim {
   to {
@@ -345,7 +350,6 @@ body {
 }
 /* menu */
 #menu {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -424,6 +428,36 @@ body {
 }
 #menu .inner .scroll-warp .nav li:hover a {
   color: #fff;
+}
+#menu.hide + #main {
+  padding-left: 0;
+}
+#menu.hide {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+}
+#menu.hide #menu-off {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+@media screen and (max-width: 1240px) {
+  #menu-off {
+    display: none;
+  }
+  #menu {
+    z-index: 99;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  #menu.show {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  #main {
+    padding-left: 0;
+  }
 }
 /* main */
 #main {
@@ -530,6 +564,11 @@ body {
   padding: 10px 0;
   background: #3f51b5;
 }
+@media screen and (max-width: 1240px) {
+  #main {
+    padding-left: 0px;
+  }
+}
 .tag-list {
   margin-top: 10px;
   margin-bottom: 5px;
@@ -607,9 +646,28 @@ body {
   display: block;
   text-align: center;
 }
+/* 遮罩层 */
+#mask {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 88;
+  opacity: 0;
+  background: #000000;
+  pointer-events: none;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+#mask.in {
+  opacity: 0.3;
+  visibility: visible;
+  pointer-events: auto;
+}
 /* 返回顶部 */
 #gotop {
-  display: none;
   position: fixed;
   right: 16px;
   bottom: 30px;
@@ -619,8 +677,18 @@ body {
   line-height: 56px;
   text-align: center;
   color: #fff;
+  opacity: 0;
   font-size: 22px;
   font-weight: 600;
   background: #FF4081;
   border-radius: 50%;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  -webkit-transform: translateX(200%);
+          transform: translateX(200%);
+}
+#gotop.in {
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
