--- a/css/style.less
+++ b/css/style.less
@@ -333,24 +333,10 @@ body {
 	min-height: 100%;
 	background: #fff;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-	-webkit-transition: .4s cubic-bezier(.18, .81, .3, .89);
 	transition: .4s cubic-bezier(.18, .81, .3, .89);
 	.inner{
 		position: relative;
 		height: 100%;
-		#menu-off{
-			position: absolute;
-			top: 0;
-			left: 100%;
-			width: 55px;
-			height: 55px;
-			line-height: 55px;
-			text-align: center;
-			color: #fff;
-			i{
-				font-size: 28px;
-			}
-		}
 		.user-info{
 			/*个人信息*/
 			padding:  35px 20px;
@@ -401,7 +387,20 @@ body {
 	}
 }
 
-
+#menu-off{
+	position: absolute;
+	top: 0;
+	left: 100%;
+	width: 55px;
+	height: 55px;
+	line-height: 55px;
+	text-align: center;
+	color: #fff;
+	transition: .4s cubic-bezier(.18, .81, .3, .89);
+	i{
+		font-size: 28px;
+	}
+}
 #menu.hide+#main {
 	padding-left: 0;
 }
