--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,7 @@ body {
 #menu .inner .scroll-warp .nav li:hover a {
   color: #fff;
 }
+/* 关闭按钮 */
 #menu-off {
   position: absolute;
   top: 0;
@@ -468,6 +469,15 @@ body {
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
 }
+#main .header-title {
+  visibility: hidden;
+  height: 55px;
+  line-height: 55px;
+  font-weight: 600;
+  font-size: 18px;
+  padding-right: 15px;
+  text-align: center;
+}
 #main .top-header {
   position: fixed;
   top: 0;
@@ -485,13 +495,8 @@ body {
   -webkit-box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.26);
           box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.26);
 }
-#main h2 {
-  height: 55px;
-  line-height: 55px;
-  font-weight: 600;
-  font-size: 18px;
-  padding-right: 15px;
-  text-align: center;
+#main .top-header.fixed .header-title {
+  visibility: visible;
 }
 #main .header-icon {
   width: 55px;
@@ -554,7 +559,6 @@ body {
           box-shadow: 0 8px 14px 1px rgba(0, 0, 0, 0.3);
 }
 #main #footer {
-  margin-left: -240px;
   text-align: center;
   color: #fff;
 }
@@ -571,6 +575,19 @@ body {
     padding-left: 0px;
   }
 }
+@media screen and (max-width: 640px) {
+  #header .header-title {
+    text-align: left;
+  }
+}
+/* 搜索框 */
+.search-warp {
+  position: relative;
+}
+.search-warp #back {
+  display: none;
+}
+/*标签*/
 .tag-list {
   margin-top: 10px;
   margin-bottom: 5px;
@@ -693,4 +710,11 @@ body {
   opacity: 1;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+@media screen and (max-width: 640px) {
+  #gotop {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+  }
 }
