--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ h4,
 h5,
 h6 {
   font-weight: 400;
+  word-break: break-all;
 }
 h1,
 .h1 {
@@ -544,9 +545,6 @@ body {
   font-size: 12px;
   color: #999;
 }
-#main .article-list .article-list-item .article-content {
-  word-break: break-all;
-}
 #main #article {
   margin: 20px auto;
 }
@@ -557,6 +555,9 @@ body {
   border-radius: 10px;
   -webkit-box-shadow: 0 8px 14px 1px rgba(0, 0, 0, 0.3);
           box-shadow: 0 8px 14px 1px rgba(0, 0, 0, 0.3);
+}
+#main #article .article-detail .title {
+  word-break: break-all;
 }
 #main #footer {
   text-align: center;
@@ -586,6 +587,14 @@ body {
 }
 .search-warp #back {
   display: none;
+}
+.search-warp #key {
+  position: relative;
+  z-index: 2;
+  margin: 10px 10px 0 0;
+  border: none;
+  border-bottom: 2px solid #fff;
+  background: transparent;
 }
 /*标签*/
 .tag-list {
