--- a/css/style.less
+++ b/css/style.less
@@ -20,7 +20,8 @@ input:-webkit-autofill {
 }
 
 h1,h2,h3,h4,h5,h6 {
-	font-weight: 400
+	font-weight: 400;
+	word-break: break-all;
 }
 
 h1,.h1 {
@@ -55,7 +56,7 @@ h6,.h6 {
 
 input[type="button"],input[type="submit"],input[type="search"],input[type="reset"] {
 	cursor: pointer;
-	-webkit-appearance: button
+	-webkit-appearance: button;
 }
 
 input:focus,select:focus,button:focus,textarea:focus {
@@ -506,9 +507,6 @@ body {
 				font-size: 12px;
 				color:#999;
 			}
-			.article-content{
-				word-break: break-all;
-			}
 		}
 	}
 	#article{
@@ -516,10 +514,12 @@ body {
 		.article-detail{
 			padding: 35px;
 			margin-top: -115px;
-			// min-height: 600px;
 			background: #fff;
 			border-radius: 10px;
-			box-shadow: 0 8px 14px 1px rgba(0, 0, 0, 0.3);
+			box-shadow: 0 8px 14px 1px rgba(0, 0, 0, 0.3);;
+			.title{
+				word-break: break-all;
+			}
 		}
 	}
 	#footer{
@@ -558,7 +558,7 @@ body {
 		position: relative;
 		z-index: 2;
 		margin: 10px 10px 0 0;
-		border: none:
+		border: none;
 		border-bottom: 2px solid #fff;
 		background: transparent;
 	}
