--- a/css/style.css
+++ b/css/style.css
@@ -305,27 +305,52 @@ a {
 .fade-scale.in {
   opacity: 1;
   -webkit-transform: none;
-  transform: none;
+          transform: none;
 }
 .fade {
   -webkit-transition: 0.4s ease-in-out;
   transition: 0.4s ease-in-out;
   -webkit-transform: translateY(50px);
-  transform: translateY(50px);
+          transform: translateY(50px);
 }
 .fade-scale {
   -webkit-transition: 0.6s ease-in-out;
   transition: 0.6s ease-in-out;
   -webkit-transform: translate(10%, 20%) scale(0.6);
-  transform: translate(10%, 20%) scale(0.6);
+          transform: translate(10%, 20%) scale(0.6);
 }
 @media screen and (max-width: 480px) {
   .fade,
   .fade-scale {
     opacity: 1;
     -webkit-transform: none;
-    transform: none;
+            transform: none;
   }
+}
+.post-title-link {
+  color: #3F51B5;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+.post-title-link::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-bottom: 2px solid #3F51B5;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+}
+.post-title-link:hover::after,
+.post-title-link:active::after {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 *,
 *::before,
@@ -542,6 +567,7 @@ body {
   color: #3F51B5;
 }
 #main .article-list .article-list-item .post-time {
+  display: block;
   font-size: 12px;
   color: #999;
 }
@@ -571,30 +597,67 @@ body {
   padding: 10px 0;
   background: #3f51b5;
 }
+/* 搜索框 */
+#search-warp {
+  position: relative;
+}
+#search-warp.in .search-input {
+  width: 360px;
+}
+#search-warp.in #search i {
+  color: #C5CAE9;
+}
+#search-warp #back {
+  display: none;
+}
+#search-warp .search-input {
+  position: relative;
+  z-index: 2;
+  width: 0;
+  height: 32px;
+  margin: 10px 10px 0 0;
+  border: none;
+  border-bottom: 2px solid #fff;
+  background: transparent;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+#search-warp .search-input::-webkit-input-placeholder {
+  color: #C5CAE9;
+}
+#search-warp #search {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 3;
+}
 @media screen and (max-width: 1240px) {
   #main {
     padding-left: 0px;
   }
 }
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 760px) {
   #header .header-title {
     text-align: left;
   }
-}
-/* 搜索框 */
-.search-warp {
-  position: relative;
-}
-.search-warp #back {
-  display: none;
-}
-.search-warp #key {
-  position: relative;
-  z-index: 2;
-  margin: 10px 10px 0 0;
-  border: none;
-  border-bottom: 2px solid #fff;
-  background: transparent;
+  #search-warp.in {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 0 16px 0 56px;
+    background: #3f51b5;
+  }
+  #search-warp.in .search-input {
+    width: 100%;
+  }
+  #search-warp.in #back {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 /*标签*/
 .tag-list {
