--- a/css/style.less
+++ b/css/style.less
@@ -273,32 +273,48 @@ a{text-decoration:none;cursor: pointer;}
 
 .fade.in,.fade-scale.in {
 	opacity: 1;
-	-webkit-transform: none;
-	transform: none
+	transform: none;
 }
 
 .fade {
-	-webkit-transition: .4s ease-in-out;
 	transition: .4s ease-in-out;
-	-webkit-transform: translateY(50px);
 	transform: translateY(50px)
 }
 
 .fade-scale {
-	-webkit-transition: .6s ease-in-out;
 	transition: .6s ease-in-out;
-	-webkit-transform: translate(10%, 20%) scale(.6);
 	transform: translate(10%, 20%) scale(.6)
 }
 
 @media screen and (max-width: 480px) {
 	.fade,.fade-scale {
 		opacity:1;
-		-webkit-transform: none;
 		transform: none
 	}
 }
 
+.post-title-link {
+	color: #3F51B5;
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+}
+
+.post-title-link::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+	border-bottom: 2px solid #3F51B5;
+	transform: scaleX(0);
+	transition: .4s ease-in-out;
+}
+.post-title-link:hover::after,.post-title-link:active::after {
+	transform: scaleX(1);
+}
 
 *,*::before,*::after{
 	-webkit-box-sizing: border-box;
@@ -504,6 +520,7 @@ body {
 				}
 			}
 			.post-time{
+				display: block;
 				font-size: 12px;
 				color:#999;
 			}
@@ -537,35 +554,77 @@ body {
 
 }
 
+/* 搜索框 */
+#search-warp{
+	position: relative;
+	&.in{
+		.search-input {
+			width: 360px;
+		}
+		#search i{
+			color: #C5CAE9;
+		}
+	}
+	#back{
+		display: none;
+	}
+	.search-input{
+		position: relative;
+		z-index: 2;
+		width: 0;
+		height: 32px;
+		margin: 10px 10px 0 0;
+		border: none;
+		border-bottom: 2px solid #fff;
+		background: transparent;
+		transition: .2s ease-in-out;
+		&::-webkit-input-placeholder {
+			color: #C5CAE9;
+		}
+
+	}
+	#search{
+		position: absolute;
+		top: 0;
+		right: 0;
+		z-index: 3;
+	}
+}
+
+
 @media screen and (max-width: 1240px) {
 	#main {
 		padding-left: 0px;
 	}
 }
-@media screen and (max-width: 640px) {
+
+@media screen and (max-width: 760px) {
 	#header .header-title {
 		text-align: left;
 	}
+	#search-warp.in {
+		position:absolute;
+		top: 0;
+		right: 0;
+		z-index: 10;
+		width: 100%;
+		padding: 0 16px 0 56px;
+		background: #3F51B5
+	}
+
+	#search-warp.in .search-input {
+		width: 100%
+	}
+
+	#search-warp.in #back {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
 }
 
-/* 搜索框 */
-.search-warp{
-	position: relative;
-	#back{
-		display: none;
-	}
-	#key{
-		position: relative;
-		z-index: 2;
-		margin: 10px 10px 0 0;
-		border: none;
-		border-bottom: 2px solid #fff;
-		background: transparent;
-	}
-	#search{
 
-	}
-}
 
 /*标签*/
 .tag-list{
