--- a/css/style.less
+++ b/css/style.less
@@ -86,7 +86,6 @@ a{text-decoration:none;cursor: pointer;}
 }
 
 
-
 /* 文字溢出隐藏 */
 .text-clip{
 	padding: 0 2px;
@@ -236,6 +235,12 @@ a{text-decoration:none;cursor: pointer;}
 
 ::selection {
 	background: #d7dbf0
+}
+
+@media screen and (max-width: 720px) {
+	::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 
@@ -519,6 +524,9 @@ body {
 					color: #3F51B5;
 				}
 			}
+			.article-content{
+				word-break: break-all;
+			}
 			.post-time{
 				display: block;
 				font-size: 12px;
@@ -565,7 +573,7 @@ body {
 			color: #C5CAE9;
 		}
 	}
-	#back{
+	#search-back{
 		display: none;
 	}
 	.search-input{
@@ -576,6 +584,7 @@ body {
 		margin: 10px 10px 0 0;
 		border: none;
 		border-bottom: 2px solid #fff;
+		color: #fff;
 		background: transparent;
 		transition: .2s ease-in-out;
 		&::-webkit-input-placeholder {
@@ -591,6 +600,67 @@ body {
 	}
 }
 
+/* 搜索面板 */
+.search-panel{
+	position: fixed;
+	top: 50px;
+	right: 65px;
+	z-index: 6;
+	width: 420px;
+	max-height: 70%;
+	overflow-x: hidden;
+	overflow-y: auto;
+	background: #fff;
+	box-shadow: 0 1px 15px 2px rgba(0, 0, 0, 0.3);
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(-50%) scale(0);
+	transition: 0.3s ease-in-out;
+	&.in{
+		opacity: 1;
+		visibility: visible;
+		transform: none;
+	}
+	.search-result{
+		.item{
+			border-bottom: 1px solid #ccc;
+			line-height: 1.6em;
+			padding: 10px 20px;
+			a{
+				.tags{
+					width: 70%;
+					color: #666;
+					span{
+						margin-right: 5px;
+						font-size: 13px;
+					}
+				}
+				.time{
+					text-align: right;
+					font-size: 13px;
+					color: #727272;
+				}
+				&:hover{
+					text-decoration: underline;
+				}
+			}
+		}
+		.tips{
+			padding: 10px 20px;
+			text-align: center;
+			color: #666;
+			.iconfont{
+				padding: 10px 0;
+				display: inline-block;
+				font-size: 35px;
+			}
+			p{
+				font-size: 16px;
+			}
+		}
+	}
+}
+
 
 @media screen and (max-width: 1240px) {
 	#main {
@@ -603,7 +673,7 @@ body {
 		text-align: left;
 	}
 	#search-warp.in {
-		position:absolute;
+		position:fixed;
 		top: 0;
 		right: 0;
 		z-index: 10;
@@ -616,11 +686,19 @@ body {
 		width: 100%
 	}
 
-	#search-warp.in #back {
+	#search-warp.in #search-back {
 		display: block;
 		position: absolute;
 		top: 0;
 		left: 0;
+	}
+	.search-panel{
+		padding-top: 56px;
+		top: 1px;
+		right: 0;
+		width: 100%;
+		min-height: 100%;
+		max-height: 100%;
 	}
 }
 
